DT-865 fixes some spacing issues between the dots and the starting your business section

--- a/src/client/components/homepage/happening-now.scss
+++ b/src/client/components/homepage/happening-now.scss
@@ -2,7 +2,6 @@
 
 .happeningNow {
     margin-top: 5vw;
-    margin-bottom: 11vw;
     padding-left: 0;
     padding-right: 0;
     width: 100%;
@@ -67,10 +66,10 @@
     text-align: left;
     color: black;
     font-weight: bold;
-    font-size: 3.5vw;
+    font-size: 4.5vw;
     background-color: white;
     margin-top: 4.2vw;
-    margin-bottom: 4.2vw;
+    margin-bottom: 8vw;
     margin-left: 4.2%;
 }
 
