--- a/src/client/components/homepage/slick-theme.scss
+++ b/src/client/components/homepage/slick-theme.scss
@@ -6,7 +6,7 @@ $slick-loader-path: "../../../../node_modules/slick-carousel/slick/" ;
 $slick-dot-color:  #C4C4C4;
 $slick-dot-color-active: #0B97DD ;
 $slick-dot-character: "\2022" ;
-$slick-dot-size: 7.5vw ;
+$slick-dot-size: 15vw ;
 $slick-opacity-default: 1 ;
 $slick-opacity-on-hover: 1 ;
 $slick-opacity-not-active: 1 ;
@@ -24,4 +24,12 @@ $slick-opacity-not-active: 1 ;
 
 .slick-dots li button{
     cursor: auto !important;
+}
+
+.slick-dots {
+    bottom: 0px;
+    position: static;
+    li{
+      margin: 0vw 2vw;  
+    }
 }
